--- a/showtime-squad_frontend/src/components/modals/LoginRegister.scss
+++ b/showtime-squad_frontend/src/components/modals/LoginRegister.scss
@@ -1,4 +1,15 @@
 #form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    /* Semi-transparent black overlay */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 
     .container {
         display: flex;
@@ -12,8 +23,22 @@
         border: 1px solid #000;
         /* Add border with color (e.g., black) and thickness (1px) */
         border-radius: 10px;
+        background: #fff;
+        position: relative;
+        /* Added position relative for absolute positioning of close button */
     }
 
+    .close-button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+        font-size: 18px;
+        color: #555;
+        background: none;
+        border: none;
+        outline: none;
+    }
 
     .header {
         display: flex;
@@ -99,8 +124,9 @@
         cursor: pointer;
         margin: 45px auto;
         position: relative;
+        outline: none;
     }
-    
+
     .submit::after {
 
         content: '';
