--- a/showtime-squad_frontend/src/components/ui/Main.css
+++ b/showtime-squad_frontend/src/components/ui/Main.css
@@ -1,4 +1,3 @@
-
 .main {
     display: flex;
     flex-wrap: wrap;
@@ -8,6 +7,5 @@
 .view-wrapper {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: space-between;
 }
-
