--- a/showtime-squad_frontend/src/components/atoms/Stars.scss
+++ b/showtime-squad_frontend/src/components/atoms/Stars.scss
@@ -2,17 +2,19 @@
     --_star-color: orange;
     --_tooltip_width: 5rem;
 
-    color: black;
     position: relative;
     display: flex;
+    justify-content: center;
 
-    background-image: linear-gradient(90deg,
-            var(--star-color, var(--_star-color)) 50%,
-            #000000AA 50%);
+    span {
+        background-image: linear-gradient(90deg,
+                var(--star-color, var(--_star-color)) 50%,
+                #00000088 50%);
 
-    color: transparent;
-    -webkit-background-clip: text;
-    background-clip: text;
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+    }
 
     img {
         width: 20%;
