--- a/showtime-squad_frontend/src/components/atoms/Stars.scss
+++ b/showtime-squad_frontend/src/components/atoms/Stars.scss
@@ -14,6 +14,9 @@
         color: transparent;
         -webkit-background-clip: text;
         background-clip: text;
+
+        // https://css-tricks.com/linearly-scale-font-size-with-css-clamp-based-on-the-viewport/
+        font-size: clamp(0.5rem, -1.0000rem + 4.0000vw, 2rem);
     }
 
     img {
