Implemented frontend requests

--- a/showtime-squad_frontend/src/components/modals/LoginRegister.scss
+++ b/showtime-squad_frontend/src/components/modals/LoginRegister.scss
@@ -152,4 +152,10 @@
         margin-top: 5px;
         /* Add margin to separate error messages from inputs */
     }
+
+    .successful-message {
+        color: green;
+        font-size: 12px;
+        margin-top: 5px;
+    }
 }
