--- a/showtime-squad_frontend/src/pages/Profile/Profile.scss
+++ b/showtime-squad_frontend/src/pages/Profile/Profile.scss
@@ -6,14 +6,22 @@
 #profile {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     padding: 5px;
 }
     .profile_container {
-    display: flex;
     width: 1240px;
     max-width: 100%;
-    flex-direction: column;
-    align-items: stretch;
-    background-color: white;
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+    border: black;
+    border-style: solid; 
+    }
+
+    .container_item {
+        border: black;
+        border-style: solid; 
     }
