Attach SearchBar to Navbar
Search bar attach works now with laptop

--- a/showtime-squad_frontend/src/components/ui/SearchBar.scss
+++ b/showtime-squad_frontend/src/components/ui/SearchBar.scss
@@ -6,6 +6,10 @@
     transform: translateX(-50%);
     bottom: 10dvh;
 
+    &.scrolled {
+        position: fixed;
+        top: 0;
+    }
 
     input {
         width: 30dvw;
@@ -16,7 +20,11 @@
         position: absolute;
         top: 50%;
         transform: translate(-100%, -50%);
-
         background-color: #333;
+
+        &#scrolled {
+            position: fixed;
+            top: 4.2%;
+        }
     }
 }
