--- a/showtime-squad_frontend/src/components/containers/ViewBlock.scss
+++ b/showtime-squad_frontend/src/components/containers/ViewBlock.scss
@@ -30,6 +30,8 @@
 
             border-radius: 5px;
 
+            text-transform: capitalize;
+
             h6 {
                 text-align: center;
                 font-size: 1.5rem;
