--- a/showtime-squad_frontend/src/components/atoms/MovieBlock.scss
+++ b/showtime-squad_frontend/src/components/atoms/MovieBlock.scss
@@ -1,9 +1,15 @@
 .movie-block {
     .image-container {
+        display: block;
+        width: 100%;
         aspect-ratio: 2/3;
+
+        line-height: 0;
 
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 }
