--- a/showtime-squad_frontend/src/components/atoms/Adder.scss
+++ b/showtime-squad_frontend/src/components/atoms/Adder.scss
@@ -1,5 +1,6 @@
 .adder {
     --_block-inset-margin: 2rem;
+    --_border-width: 0.1em;
 
     display: flex;
     align-items: center;
@@ -7,7 +8,7 @@
 
     margin: var(--_block-inset-margin);
 
-    font-size: 5rem;
+    font-size: 5em;
 
     border-radius: 5px;
 
@@ -22,9 +23,9 @@
 
         text-align: center;
 
-        margin: 4px;
+        margin: var(--_border-width);
 
-        border-width: 4px;
+        border-width: var(--_border-width);
         border-style: dashed;
         border-radius: 5px;
     }
