implemented smooth animation

--- a/showtime-squad_frontend/src/components/ui/SearchBar.scss
+++ b/showtime-squad_frontend/src/components/ui/SearchBar.scss
@@ -5,11 +5,13 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 10dvh;
+    transition: all 0.9s ease;
 
     &.scrolled {
         position: fixed;
         top: 0;
         height: 0;
+        left: 84%;
     }
 
     input {
