--- a/showtime-squad_frontend/src/components/ui/FilterBar.scss
+++ b/showtime-squad_frontend/src/components/ui/FilterBar.scss
@@ -1,6 +1,6 @@
 #nav-bar {
     top: 0;
-    position: sticky; /* Change to sticky instead of fixed */
+    /* Change to sticky instead of fixed */
 
     display: flex;
     justify-content: center;
@@ -10,6 +10,7 @@
 
     background-color: black;
     color: var(--light-med, white);
+    z-index: 2;
 
     ul {
         list-style-type: none;
