--- a/showtime-squad_frontend/src/components/ui/FilterBar.scss
+++ b/showtime-squad_frontend/src/components/ui/FilterBar.scss
@@ -1,52 +1,52 @@
-#nav-bar {
+#filter-bar {
     top: 0;
-    /* Change to sticky instead of fixed */
-
     display: flex;
     justify-content: center;
-
+    align-items: center;
     width: 100%;
-    height: 64px;
-
+    height: auto;
+    min-height: 64px;
     background-color: black;
-    color: var(--light-med, white);
     z-index: 2;
+    flex-wrap: wrap;
 
-    ul {
-        list-style-type: none;
-        padding-inline-start: 0;
+    button {
+        background-color: black;
+        color: #646CFF;
+        border: none;
+        outline: none;   
     }
-
-    li {
-        position: relative;
-        display: inline;
-
-        padding-inline: 1rem;
-    }
-
-    li.dropdown {
-        display: inline-block;
+    
+    .dropbtn {
+        background-color: black;
+        color: #646CFF;
+        border: 0;
+        cursor: default;
+        transition: background-color 0.3s, color 0.3s;
+        font-size: 16px;
+        font-weight: 500;
+        padding-left: 20px;
     }
 
     .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #f9f9f9;
+        background-color: white;
         min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 2; /* Increase the z-index value for the dropdown */
-    }
+        z-index: 2;
+        margin-left: 20px;
 
-    .dropdown-content li {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
-
-    .dropdown-content li:hover {
-        background-color: #f1f1f1;
+        button {
+            color: #646CFF;
+            text-align: left;
+            background-color: white;
+            border: 0;
+            border-radius: 0;
+            min-width: 160px;
+            &:hover {
+                background-color: #f1f1f1;
+            }
+        }
     }
 
     .dropdown:hover .dropdown-content {
