--- a/showtime-squad_frontend/src/components/ui/Movies.scss
+++ b/showtime-squad_frontend/src/components/ui/Movies.scss
@@ -30,6 +30,33 @@
     .movie-card:hover {
         transform: scale(1.1);
     }
+
+    .text {
+      width: 100%; // Ensure the text div takes up the full width
+      text-align: center; // Center the text
+      margin-top: 20px;
+      font-size: 26px;
+      font-weight: 700; // Add spacing between movies and text
+  
+      p {
+        margin: 8px 0; // Adjust margin as needed
+      }
+    }
+
+    .fa-solid.fa-arrows-rotate {
+      animation: spin 2s infinite linear;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    @keyframes spin {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
   
     // Adjust the justification for a single movie
     @media (max-width: 300px) {
