+create group modal

--- a/showtime-squad_frontend/src/pages/Groups/GroupView.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupView.scss
@@ -1,7 +1,11 @@
 .group-view {
 
-    .user {
+    .inline {
         display: flex;
         align-items: center;
+    }
+
+    .user {
+        
     }
 }
