profiles can be now be accessed as logged in users or with params

--- a/showtime-squad_frontend/src/components/ui/Profile.scss
+++ b/showtime-squad_frontend/src/components/ui/Profile.scss
@@ -1,5 +1,3 @@
-
-
 #profile {
   :root {
     background-color: black;
@@ -24,6 +22,7 @@
         margin-right: 40px;
         width: 150px;
         height: 150px;
+        object-fit: cover;
       }
 
       .description {
