added a max-w to the description

--- a/showtime-squad_frontend/src/components/ui/Profile.scss
+++ b/showtime-squad_frontend/src/components/ui/Profile.scss
@@ -9,6 +9,8 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 25px;
+    border: white;
+    border-style: solid;
 
     .profile-top {
       display: flex;
@@ -18,25 +20,30 @@
       background-color: #282828;
 
       img {
-        border-radius: 50%;
+        border-radius: 100%;
         margin-right: 40px;
         width: 150px;
         height: 150px;
         object-fit: cover;
+
       }
 
       .description {
         color: white;
+        max-width: 1000px;
+        border: white;
+        border-style: solid;
         h2 {
           margin-bottom: 15px;
           font-size: 24px;
         }
 
         p {
-          font-size: 18px;
-        }
-      }
+          font-size: 16px;
+        } 
+      } 
     }
+    
 
     .favorite-movies,
     .recent-reviews {
