--- a/showtime-squad_frontend/src/components/ui/Movies.scss
+++ b/showtime-squad_frontend/src/components/ui/Movies.scss
@@ -13,6 +13,7 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s;
+      cursor: pointer;
   
       img {
         max-width: 100%;
@@ -55,6 +56,12 @@
       }
       to {
         transform: rotate(360deg);
+      }
+    }
+
+    .movieDetails {
+      img {
+        height: 500px;
       }
     }
   
