--- a/showtime-squad_frontend/src/pages/Groups/GroupBlock.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupBlock.scss
@@ -1,7 +1,14 @@
 .group-block {
+    padding: 20px;
+    text-align: center;
+
+    background-color: #ffffff11;
+
+    border-radius: 5px;
 
     .group-card {
         display: flex;
         align-items: center;
+        justify-content: space-between;
     }
 }
