--- a/showtime-squad_frontend/src/pages/Groups/GroupView.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupView.scss
@@ -1,11 +1,40 @@
 .group-view {
+    // display: grid;
+    // grid-template-columns: repeat(3, 1fr);
 
     .inline {
         display: flex;
         align-items: center;
+        justify-content: space-between;
+    }
+
+    .grid-user-list {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 20px;
+        padding: 20px;
+
+        @media only screen and (max-width: 1100px) {
+            grid-template-columns: repeat(4, 1fr);
+        }
+
+        @media only screen and (max-width: 900px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @media only screen and (max-width: 750px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 
     .user {
-        
+        overflow: hidden;
+
+        background-color: #ffffff11;
+        border-radius: 5px;
+
+        .name {
+            overflow: hidden;
+        }
     }
 }
