--- a/showtime-squad_frontend/src/components/containers/NewsBlock.scss
+++ b/showtime-squad_frontend/src/components/containers/NewsBlock.scss
@@ -1,11 +1,43 @@
 .news-block {
-
     background-color: #ffffff11;
+
+    border-radius: 20px 5px;
+
+    .news-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 3rem;
+        margin: 0;
+
+        h6 {
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            -webkit-line-clamp: 2;
+
+            display: flex;
+            align-items: center;
+            margin: 0;
+    
+            
+            // margin-block: unset;
+    
+            font-size: 1rem;
+            text-wrap: balance;
+        }
+    }
+
+    
 
     .news-content {
         display: -webkit-box;
         -webkit-box-orient: vertical;
         overflow: hidden;
         -webkit-line-clamp: 3;
+
+        min-height: 3.5rem;
+
+        font-size: 0.8rem;
     }
 }
