--- a/showtime-squad_frontend/src/components/atoms/FunctionButton.scss
+++ b/showtime-squad_frontend/src/components/atoms/FunctionButton.scss
@@ -1,8 +1,21 @@
 .function-button-wrapper {
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    
+    --_default-button-size: 3rem;
+    --_default-button-bg: #555;
+    --_default-button-color: #fff;
+
+    button {
+        width: var(--custom-button-size, --_default-button-size);
+        height: var(--custom-button-size, --_default-button-size);
+
+        padding: 0;
+
+        background-color: var(--custom-button-bg, var(--_default-button-bg));
+        color: var(--custom-button-color, var(--_default-button-color));
+
+        font-size: calc(var(--custom-button-size, --_default-button-size) / 2);
+    }
+
+
     .error {
         position: absolute;
         transform: translateY(calc(-100% - 1rem));
@@ -11,4 +24,5 @@
     .transparent {
         opacity: 0;
     }
+
 }
