--- a/showtime-squad_frontend/src/pages/Groups/GroupView.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupView.scss
@@ -5,7 +5,7 @@
     .inline {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
     }
 
     .grid-user-list {
