--- a/showtime-squad_frontend/src/components/atoms/FunctionButton.scss
+++ b/showtime-squad_frontend/src/components/atoms/FunctionButton.scss
@@ -1,18 +1,18 @@
 .function-button-wrapper {
-    --_default-button-size: 3rem;
+    --_default-button-size: 2rem;
     --_default-button-bg: #555;
     --_default-button-color: #fff;
 
     button {
-        width: var(--custom-button-size, --_default-button-size);
-        height: var(--custom-button-size, --_default-button-size);
+        width: var(--custom-button-size, unset);
+        height: var(--custom-button-size, var(--_default-button-size));
 
-        padding: 0;
+        padding: 2px;
 
         background-color: var(--custom-button-bg, var(--_default-button-bg));
         color: var(--custom-button-color, var(--_default-button-color));
 
-        font-size: calc(var(--custom-button-size, --_default-button-size) / 2);
+        font-size: calc(var(--custom-button-size, var(--_default-button-size)) / 2);
     }
 
 
