--- a/showtime-squad_frontend/src/pages/Groups/GroupNews.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupNews.scss
@@ -15,7 +15,8 @@
         }
 
         gap: 3rem;
-        padding: 20px;
+        padding-block: 1rem;
+        padding-inline: 0;
 
         .news-item {
             display: block;
