--- a/showtime-squad_frontend/src/pages/Groups/GroupView.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupView.scss
@@ -11,8 +11,9 @@
     .grid-user-list {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        gap: 20px;
-        padding: 20px;
+        gap: 2rem;
+        padding-block: 1rem;
+        padding-inline: 0;
 
         @media only screen and (max-width: 1100px) {
             grid-template-columns: repeat(4, 1fr);
