--- a/showtime-squad_frontend/src/components/ui/MovieReview.scss
+++ b/showtime-squad_frontend/src/components/ui/MovieReview.scss
@@ -13,6 +13,10 @@
         color: green;
     }
 
+    .submit-fail {
+        color: red;
+    }
+
     h2 {
         color: #333;
         margin-bottom: 10px;
