--- a/showtime-squad_frontend/src/components/ui/SearchBar.scss
+++ b/showtime-squad_frontend/src/components/ui/SearchBar.scss
@@ -19,12 +19,28 @@
         width: 30dvw;
         font-size: 3dvw;
     }
+    select {
+        position: absolute;
+        left: 70%;
+        top: 35%;
+        transform: translate(0);
+        &#scrolled {
+            position: fixed;
+            left: 70%;
+            top: 35%;
+            transform: translateY(100%);
+        }
+        
+
+    }
+
 
     button {
         position: absolute;
         top: 50%;
         transform: translate(-100%, -50%);
         background-color: #333;
+        
 
         &#scrolled {
             position: fixed;
@@ -32,5 +48,6 @@
             transform: translateY(20%);
             right: 0;
         }
+        
     }
 }
