--- a/showtime-squad_frontend/src/pages/Groups/GroupList.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupList.scss
@@ -19,6 +19,7 @@
         }
 
         gap: 30px;
+        padding-block: 1rem;
 
         background-color: var(--primary-bg, var(--_group-list-bg-primary));
         color: var(--primary-color, var(--_group-list-color-primary));
