grid layout changes more dynamically

--- a/showtime-squad_frontend/src/pages/Groups/GroupList.scss
+++ b/showtime-squad_frontend/src/pages/Groups/GroupList.scss
@@ -8,14 +8,14 @@
 
     .group-grid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(6, 1fr);
 
         @media only screen and (max-width: 900px) {
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(4, 1fr);
         }
 
         @media only screen and (max-width: 600px) {
-            grid-template-columns: repeat(1, 1fr);
+            grid-template-columns: repeat(2, 1fr);
         }
 
         gap: 30px;
@@ -24,16 +24,36 @@
         background-color: var(--primary-bg, var(--_group-list-bg-primary));
         color: var(--primary-color, var(--_group-list-color-primary));
 
-        .show {
+        .group-block {
+            grid-column: span 2;
+
+            &.show {
+                grid-column: span 6;
+
+                @media only screen and (max-width: 900px) {
+                    grid-column: span 4;
+                }
+
+                @media only screen and (max-width: 600px) {
+                    grid-column: span 2;
+                }
+
+
+            }
+
+        }
+
+        // select every 1,4,7... element, that has a direct sibling with .show
+        .group-block.hide:nth-child(3n-1):has(+ .group-block.show),
+        // also select every element that has previous conditions fulfilled as a next sibling
+        .group-block.hide:has(+ .group-block.hide:nth-child(3n-1) +.group-block.show) {
+            // background-color: lightseagreen;
             grid-column: span 3;
+        }
 
-            @media only screen and (max-width: 900px) {
-                grid-column: span 2;
-            }
-
-            @media only screen and (max-width: 600px) {
-                grid-column: span 1;
-            }
+        .group-block.hide:nth-child(3n-2):has(+ .group-block.show) {
+            // background-color: lightcoral;
+            grid-column: span 6;
         }
     }
 }
