--- a/showtime-squad_frontend/src/components/ui/FilterBar.scss
+++ b/showtime-squad_frontend/src/components/ui/FilterBar.scss
@@ -25,7 +25,7 @@
         transition: background-color 0.3s, color 0.3s;
         font-size: 16px;
         font-weight: 500;
-        padding-left: 20px;
+        padding-right: 20px;
     }
 
     .dropdown-content {
@@ -34,7 +34,7 @@
         background-color: white;
         min-width: 160px;
         z-index: 2;
-        margin-left: 20px;
+        margin-right: 20px;
 
         button {
             color: #646CFF;
@@ -51,5 +51,19 @@
 
     .dropdown:hover .dropdown-content {
         display: block;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .dropbtn {
+        padding-left: 10px;
+    }
+
+    .dropdown-content {
+        margin-left: 10px;
+
+        button {
+            min-width: 100%;
+        }
     }
 }
