--- a/showtime-squad_frontend/src/components/ui/SearchBar.scss
+++ b/showtime-squad_frontend/src/components/ui/SearchBar.scss
@@ -1,53 +1,78 @@
 #search-bar {
-    /* changes to fixed when scrolled past*/
+    z-index: 4;
     position: absolute;
 
     left: 50%;
     transform: translateX(-50%);
     bottom: 10dvh;
-    transition: all 0.9s ease;
-    z-index: 4;
 
-    &.scrolled {
-        position: fixed;
-        top: 0;
-        height: 0;
-        left: 84%;
+    // transition: all 0.9s ease;
+    .search-form {
+        height: 2rem;
+        display: flex;
     }
 
-    input {
-        width: 30dvw;
-        font-size: 3dvw;
+    .search-selector {
+        border-radius: 5px 0px 0px 5px;
+        border: none;
     }
-    select {
-        position: absolute;
-        left: 70%;
-        top: 35%;
-        transform: translate(0);
-        &#scrolled {
-            position: fixed;
-            left: 70%;
-            top: 35%;
-            transform: translateY(100%);
-        }
-        
 
+    .search-input {
+        border-style: dashed;
+        border-width: 0px 1px;
+    }
+
+    .search-button {
+        display: flex;
+        align-items: center;
+
+        padding-inline: 1rem;
+
+        border-radius: 0px 5px 5px 0px;
     }
 
 
-    button {
-        position: absolute;
-        top: 50%;
-        transform: translate(-100%, -50%);
-        background-color: #333;
-        
+    // &.scrolled {
+    //     position: fixed;
+    //     top: 0;
+    //     height: 0;
+    //     left: 84%;
+    // }
 
-        &#scrolled {
-            position: fixed;
-            top: 4.2%;
-            transform: translateY(20%);
-            right: 0;
-        }
-        
-    }
+    // input {
+    //     width: 30dvw;
+    //     font-size: 3dvw;
+    // }
+
+    .search-button {}
+
+    // select {
+    //     position: absolute;
+    //     left: 70%;
+    //     top: 35%;
+    //     transform: translate(0);
+
+    //     &.scrolled {
+    //         position: fixed;
+    //         left: 70%;
+    //         top: 35%;
+    //         transform: translateY(100%);
+    //     }
+    // }
+
+    // button {
+    //     position: absolute;
+    //     top: 50%;
+    //     transform: translate(-100%, -50%);
+    //     background-color: #333;
+
+
+    //     &.scrolled {
+    //         position: fixed;
+    //         top: 4.2%;
+    //         transform: translateY(20%);
+    //         right: 0;
+    //     }
+
+    // }
 }
