--- a/showtime-squad_frontend/src/components/ui/NavBar.scss
+++ b/showtime-squad_frontend/src/components/ui/NavBar.scss
@@ -1,13 +1,16 @@
 .nav-bar {
+    --_nav-bar-height: 4rem;
+
     top: 0;
     position: fixed;
     z-index: 3;
 
     display: flex;
     justify-content: center;
+    align-items: center;
 
     width: 100%;
-    height: 64px;
+    height: var(--nav-bar-height, var(--_nav-bar-height));
 
     background-color: black;
     color: var(--light-med, white);
@@ -39,7 +42,7 @@
 
     .dropdown-content li {
         color: black;
-        padding: 12px 16px;
+        padding: calc(var(--nav-bar-height, var(--_nav-bar-height)) / 4);
         text-decoration: none;
         display: block;
         text-align: left;
