--- a/showtime-squad_frontend/src/components/ui/SearchBar.scss
+++ b/showtime-squad_frontend/src/components/ui/SearchBar.scss
@@ -1,15 +1,33 @@
 #search-bar {
+    --_nav-bar-height: 4rem;
+
     z-index: 4;
-    position: absolute;
 
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 10dvh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    top: 85dvh;
+    height: 0;
 
+    // position: absolute;
+    // left: 50%;
+    // transform: translateX(-50%);
+    // bottom: 10dvh;
     // transition: all 0.9s ease;
+
     .search-form {
         height: 2rem;
         display: flex;
+
+        &.scrolled {
+            position: fixed;
+            display: flex;
+            top: 0;
+            // align-items: center;
+
+            height: var(--nav-bar-height, var(--_nav-bar-height));
+        }
     }
 
     .search-selector {
@@ -31,48 +49,13 @@
         border-radius: 0px 5px 5px 0px;
     }
 
+    &.scrolled {
+        // position: fixed;
+        // display: flex;
+        // top: 0;
+        // height: var(--nav-height);
+        // align-items: center;
 
-    // &.scrolled {
-    //     position: fixed;
-    //     top: 0;
-    //     height: 0;
-    //     left: 84%;
-    // }
-
-    // input {
-    //     width: 30dvw;
-    //     font-size: 3dvw;
-    // }
-
-    .search-button {}
-
-    // select {
-    //     position: absolute;
-    //     left: 70%;
-    //     top: 35%;
-    //     transform: translate(0);
-
-    //     &.scrolled {
-    //         position: fixed;
-    //         left: 70%;
-    //         top: 35%;
-    //         transform: translateY(100%);
-    //     }
-    // }
-
-    // button {
-    //     position: absolute;
-    //     top: 50%;
-    //     transform: translate(-100%, -50%);
-    //     background-color: #333;
-
-
-    //     &.scrolled {
-    //         position: fixed;
-    //         top: 4.2%;
-    //         transform: translateY(20%);
-    //         right: 0;
-    //     }
-
-    // }
+        // height: var(--nav-bar-height, var(--_nav-bar-height));
+    }
 }
