--- a/showtime-squad_frontend/src/components/ui/NavBar.scss
+++ b/showtime-squad_frontend/src/components/ui/NavBar.scss
@@ -1,5 +1,6 @@
 .nav-bar {
     --_nav-bar-height: 4rem;
+    --_primary-bg-super-dark: #222;
 
     top: 0;
     position: fixed;
@@ -12,7 +13,7 @@
     width: 100%;
     height: var(--nav-bar-height, var(--_nav-bar-height));
 
-    background-color: black;
+    background-color: var(--primary-bg-super-dark, var(--_primary-bg-super-dark));
     color: var(--light-med, white);
 
     ul {
