--- a/showtime-squad_frontend/src/pages/Groups/CreateGroupModal.scss
+++ b/showtime-squad_frontend/src/pages/Groups/CreateGroupModal.scss
@@ -1,12 +1,59 @@
 #create-group-modal {
+    --_primary-color: #fff;
+    --_primary-bg: #333;
+    --_primary-bg-mega-dark: #111;
+
+    --_close-button-size: 2rem;
+
+    z-index: 1000;
+
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
+
+    background-color: #000000cc;
+    color: var(--primary-color, var(--_primary-color));
+
+    border: none;
+    border-radius: 20px 5px;
+    backdrop-filter: blur(16px);
 
     .flex-wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+
+    .close-button {
+        position: absolute;
+        width: var(--_close-button-size);
+        height: var(--_close-button-size);
+        right: calc(0rem - var(--_close-button-size) / 2);
+        top: calc(0rem - var(--_close-button-size) / 2);
+
+        .function-button {
+            width: 100%;
+            height: 100%;
+            background-color: var(--primary-bg, var(--_primary-bg-mega-dark));
+        }
+    }
+
+    .function-button {
+        background-color: var(--_primary-bg, var(--_primary-bg));
+    }
+
+    .submit-button {
+        padding-block-start: 1rem;
+    }
+
+    [type="text"] {
+        border-width: 1px;
+        border-style: solid;
+        border-color: #ffffff22;
+        border-radius: 5px;
+
+        background-color: #000000cc;
+        color: var(--primary-color, var(--_primary-color))
     }
 }
