--- a/showtime-squad_frontend/src/components/ui/MovieReview.scss
+++ b/showtime-squad_frontend/src/components/ui/MovieReview.scss
@@ -4,7 +4,7 @@
     margin: 20px auto;
     padding: 20px;
     border: 1px solid #ddd;
-    background-color: #f9f9f9;
+    background-color: var(--primary-bg);
     font-family: 'Arial', sans-serif;
     font-size: 16px;
     font-weight: 400;
