--- a/showtime-squad_frontend/src/components/ui/MovieReview.scss
+++ b/showtime-squad_frontend/src/components/ui/MovieReview.scss
@@ -44,6 +44,7 @@
         label {
             display: block;
             margin-bottom: 10px;
+            
 
             input,
             textarea {
@@ -52,6 +53,7 @@
                 margin-top: 5px;
                 margin-bottom: 10px;
                 box-sizing: border-box;
+                background-color: #ddd;
             }
         }
 
